* [Herve Drolon] fixed a memory leak with loading of exif JPEG images
* [Detlev Vendt] changed some 'pointer-to-int' casts to 'pointer-to-long' for 64bit machines
* [Ryan Rubley] fixed a memory leak in the multipage API
+ [Ryan Rubley] added FreeImage_ColorQuantizeEx
+ [Ryan Rubley] added FIMD_ANIMATION and FIDT_PALETTE

February 20, 2005 - 3.6.1
* [Ryan Rubley] fixed a memory leak in the metadata API
* [luedi] improved the robustness of FIBITMAP allocations

February 13, 2005 - 3.6.0
! FreeImage now uses libMNG 1.0.9
! [Herve Drolon] improved the speed of FreeImage_Rescale
! [Herve Drolon] improved FreeImage_RotateClassic (more compact code, a little faster)
! [Herve Drolon] improved the metadata API using tag accessors
+ [Detlev Vendt] added LZW support to PluginGIF:Save
+ [Herve Drolon] added VS.Net 2003 project files
+ [Herve Drolon] added VERSIONINFO resource to the DLL
+ [Herve Drolon] added support for CMYK JPEG on loading
+ [Petr Supina] added 16-bytes alignment to FIBITMAP palette and pixels starting address
+ [Petr Supina] added support for MMX/SSE2 code in LibJPEG (based on Mozilla/Firefox code)
+ [Herve Drolon] added TIFF_JPEG compression flag to the TIFF plugin
+ [Detlev Vendt] added FreeImage_ZLibGZip
+ [Detlev Vendt] added FreeImage_ZLibCRC32
* [Detlev Vendt] fixed PluginPNG not being thread safe
* [Herve Drolon] fixed compiler warning C4018 occuring with VS.Net 2003

December 29, 2004 - 3.5.3
! FreeImage now uses ZLib 1.2.2
! FreeImage now uses libPNG 1.2.8
! FreeImage now uses libTIFF 3.7.1
! [Herve Drolon] improved FreeImage_RotateClassic
! [Detlev Vendt] improved FreeImage_Rescale (more compact code, preserving 8-bpp colors)
+ [Herve Drolon] added support for transparency saving in ICO plugin
+ [Herve Drolon] added support for 1-bit images to FreeImage_RotateClassic
+ [Herve Drolon] added FreeImage_SetDotsPerMeterX and FreeImage_SetDotsPerMeterY
* [Nan Feng] fixed memory leak in FreeImage_DeleteTag (internal stuff)